# skjvm

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  build.sh
.github/workflows/: build.yml
include/sktest/: ansi_color.hpp  assertion.hpp  registration.hpp  source_info.hpp  test.hpp  test_group.hpp  utilities.hpp
include/sktl/: concepts.hpp
src/: CMakeLists.txt
src/java/: CMakeLists.txt  main.cpp
src/sktest/: CMakeLists.txt  assertion.cpp  registration.cpp
src/sktl/: CMakeLists.txt
test/: CMakeLists.txt
test/example/: CMakeLists.txt  example_1.cpp  example_2.cpp  example_main.cpp  main.cpp  test_floating_point.cpp  test_integer.cpp  test_string.cpp
test/sktl/: CMakeLists.txt  concepts_tests.cpp  main.cpp
